--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,88 @@
+@import url('https://fonts.cdnfonts.com/css/lato-light');
 * {
   box-sizing: border-box;
+  padding: 0%;
+  margin: 0%;
+  font-family: 'lato', sans-serif;
+}
+
+main {
+  padding-top: 10vh;
+  display: flex;
+  justify-content: center;
+
+}
+
+section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 60%;
+}
+
+ul {
+  margin: 5vh auto;
+  width: 80% ;
+  list-style: none;
+}
+
+li {
+  display: flex;
+  font-size: small;
+  font-weight: 550;
+  justify-content: space-between;
+  padding:.5%  2%;
+  align-items: center;
+}
+
+hr {
+  width: 20%;
+  border: 2px solid black;
+  margin-bottom: 2vh;
+}
+
+form {
+  
+}
+
+fieldset {
+  border: none;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 30vh;
+  justify-content: space-evenly;
+}
+
+legend {
+  font-weight: 700;
+  width: 80%;
+  margin: 0 auto;
+  text-align: center;
+  
+}
+
+input {
+  border: 2px solid black;
+  padding-left: 2%;
+}
+
+.btn {
+  background-color: white;
+  border: 2px solid black;
+  box-shadow: 2px 2px black;
+  padding: .5%;
+}
+
+.add-btn {
+  width: fit-content;
+  align-self: flex-end;
+}
+
+.books{
+  border: 2px solid black;
+}
+
+li:nth-child(even) {
+  background-color: gray;
 }
