--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.cdnfonts.com/css/lato-light');
+
 * {
   box-sizing: border-box;
   padding: 0%;
@@ -10,7 +11,6 @@ main {
   padding-top: 10vh;
   display: flex;
   justify-content: center;
-
 }
 
 section {
@@ -22,7 +22,7 @@ section {
 
 ul {
   margin: 5vh auto;
-  width: 80% ;
+  width: 80%;
   list-style: none;
 }
 
@@ -31,7 +31,7 @@ li {
   font-size: small;
   font-weight: 550;
   justify-content: space-between;
-  padding:.5%  2%;
+  padding: 0.5%  2%;
   align-items: center;
 }
 
@@ -39,10 +39,6 @@ hr {
   width: 20%;
   border: 2px solid black;
   margin-bottom: 2vh;
-}
-
-form {
-  
 }
 
 fieldset {
@@ -59,7 +55,6 @@ legend {
   width: 80%;
   margin: 0 auto;
   text-align: center;
-  
 }
 
 input {
@@ -71,7 +66,7 @@ input {
   background-color: white;
   border: 2px solid black;
   box-shadow: 2px 2px black;
-  padding: .5%;
+  padding: 0.5%;
 }
 
 .add-btn {
@@ -79,7 +74,7 @@ input {
   align-self: flex-end;
 }
 
-.books{
+.books {
   border: 2px solid black;
 }
 
