--- a/css/main.css
+++ b/css/main.css
@@ -7,10 +7,24 @@
   font-family: 'lato', sans-serif;
 }
 
+body {
+  padding: 1.5vh 3vh;
+}
+
+nav,
+footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+  padding: 0.5rem 1rem;
+  border: 2px solid black;
+}
+
 main {
   padding-top: 10vh;
   display: flex;
   justify-content: center;
+  position: relative;
 }
 
 section {
@@ -26,6 +40,12 @@ ul {
   list-style: none;
 }
 
+nav ul {
+  display: flex;
+  justify-content: flex-end;
+  margin: 0;
+}
+
 li {
   display: flex;
   font-size: small;
@@ -33,6 +53,19 @@ li {
   justify-content: space-between;
   padding: 0.5%  2%;
   align-items: center;
+}
+
+nav li {
+  border-right: 1px solid black;
+}
+
+nav li:last-of-type {
+  border: none;
+}
+
+a {
+  color: black;
+  text-decoration: none;
 }
 
 hr {
@@ -62,6 +95,10 @@ input {
   padding-left: 2%;
 }
 
+footer {
+  margin-top: 70vh;
+}
+
 .btn {
   background-color: white;
   border: 2px solid black;
@@ -78,6 +115,21 @@ input {
   border: 2px solid black;
 }
 
-li:nth-child(even) {
+#main-section li:nth-child(even) {
   background-color: gray;
+}
+
+/* Single page App */
+#contact-section,
+#new-book-section,
+#main-section {
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  min-height: 75vh;
+}
+
+#main-section {
+  display: block;
 }
