--- a/css/utility.css
+++ b/css/utility.css
@@ -1,41 +1,40 @@
 .d-flex {
-    display: flex;
+  display: flex;
 }
 
 .active {
-    color: blueviolet;
+  color: blueviolet;
 }
 
 .nav-link {
-    display: inline-block;
-    width: 100%;
-    padding: .5rem;
+  display: inline-block;
+  width: 100%;
+  padding: 0.5rem;
 }
 
 .btn {
-    display: inline-block;
-    outline: none;
-    border: none;
-    padding: .1rem;
-    box-shadow: 2px 3px 2px black;
-    color: black;
-    border: 1px black solid;
+  display: inline-block;
+  outline: none;
+  padding: 0.1rem;
+  box-shadow: 2px 3px 2px black;
+  color: black;
+  border: 1px black solid;
 }
 
 .btn:hover {
-    color: white;
-    background-color: brown;
+  color: white;
+  background-color: brown;
 }
 
 .btn-danger:hover {
-    color: white;
-    background-color: red;
+  color: white;
+  background-color: red;
 }
 
 .content-hide {
-    left: -105%;
+  left: -105%;
 }
 
 .content-show {
-    left: 10%;
+  left: 10%;
 }
