--- a/css/main.css
+++ b/css/main.css
@@ -51,17 +51,34 @@ footer {
   flex-direction: column;
 }
 
+.item {
+  justify-content: space-between;
+  align-items: baseline;
+  padding: 0.2rem;
+  transition: all 1s ease-out;
+  height: auto;
+  opacity: 1;
+}
+
+.item-remove {
+  padding: 0;
+  height: 0;
+  opacity: 0;
+}
+
+.remove-book-li {
+  padding-top: 0;
+  padding-bottom: 0;
+  margin-top: 0;
+  margin-bottom: 0;
+  transition: display 2s ease-out;
+}
+
 #main-section ul {
   list-style: none;
   width: 100%;
   padding: 0;
   border: 1px solid black;
-}
-
-#main-section li {
-  justify-content: space-between;
-  align-items: baseline;
-  padding: 0.2rem;
 }
 
 #main-section li:nth-child(even) {
