--- a/css/main.css
+++ b/css/main.css
@@ -3,8 +3,7 @@
 }
 
 body {
-  /* font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; */
-  font-family: 'Rowdies', cursive;
+  font-family: 'Lato', sans-serif;
 }
 
 main {
@@ -12,11 +11,15 @@ main {
   justify-content: center;
   align-items: center;
   width: 100%;
+  margin-top: 3rem;
 }
 
-nav {
+nav,
+footer {
   justify-content: space-between;
   align-items: baseline;
+  border: 1px solid black;
+  padding: 0.7rem 0.5rem;
 }
 
 a {
@@ -36,9 +39,26 @@ nav li:last-of-type {
   border-right: none;
 }
 
+fieldset {
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  width: 22rem;
+  height: 8rem;
+  border: none;
+}
+
+legend {
+  width: 100%;
+  margin: 0 auto 1rem auto;
+  text-align: center;
+}
+
 footer {
   position: absolute;
   bottom: 0;
+  width: 98vw;
+  margin-bottom: 0.7rem;
 }
 
 .content {
@@ -83,4 +103,8 @@ footer {
 
 #main-section li:nth-child(even) {
   background-color: #ddd;
+}
+
+#add-book {
+  margin-left: 45%;
 }
